--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "Proprietary - Portchain ApS",
   "devDependencies": {
+    "prettier": "1.19.1",
     "typescript": "3.7.4"
   },
   "dependencies": {
