--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/request-promise-native": "^1.0.17",
+    "@types/ws": "7.2.0",
     "logacious": "^0.4.0",
     "request": "2.88.0",
     "request-promise-native": "^1.0.8",
