--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --forceExit --detectOpenHandles --verbose false"
   },
   "author": "",
   "license": "Proprietary - Portchain ApS",
   "devDependencies": {
+    "@types/jest": "24.9.1",
+    "jest": "25.1.0",
     "prettier": "1.19.1",
+    "ts-jest": "25.0.0",
     "typescript": "3.7.4"
   },
   "dependencies": {
