--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
+            - run: npm run build
+            - run: if [[ $(git diff) ]]; then echo "Build output does not match checked-in assets"; exit 1; fi;
             - run: npm test
 workflows:
     build-and-test:
