--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stream-sea-client",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,6 +23,7 @@
     "isomorphic-ws": "^4.0.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
+    "uuid-random": "1.3.0",
     "ws": "^7.2.0"
   }
 }
