--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "isomorphic-ws": "^4.0.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
-    "uuid-random": "1.3.0",
+    "uuid-random": "^1.3.0",
     "ws": "^7.2.0"
   }
 }
